k8s/sp.yaml
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: SecurityPolicy
# metadata:
#   name: casdoor-oidc-mcp
#   namespace: default
# spec:
#   targetRef:
#     group: gateway.networking.k8s.io
#     kind: HTTPRoute
#     name: store-mcp-server-public

#   oidc:
#     provider:
#       issuer: "https://casdoor.cloudwithme.dev"
#       authorizationEndpoint: "https://casdoor.cloudwithme.dev/login/oauth/authorize"
#       tokenEndpoint: "https://casdoor.cloudwithme.dev/api/login/oauth/access_token"

#     clientID: "55af642109d62315da60"

#     clientSecret:
#       name: "casdoor-oidc-client-secret"

#     scopes:
#       - openid
#       - profile
#       - email
#       - password

#     redirectURL: "https://vishalk17.cloudwithme.dev/store-mcp-server-public/oauth2/callback"
#     logoutPath: "/store-mcp-server-public/logout"

#     forwardAccessToken: true
#     refreshToken: true
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mcp-jwt-auth
  namespace: default
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: store-mcp-server-public

  jwt:
    optional: false
    providers:
      - name: casdoor
        issuer: "https://casdoor.cloudwithme.dev"
        audiences:
          - "55af642109d62315da60"
        remoteJWKS:
          uri: "https://casdoor.cloudwithme.dev/.well-known/jwks.json"
