k8s/store-mcp-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-mcp-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-mcp-server
  template:
    metadata:
      labels:
        app: store-mcp-server
    spec:
      containers:
        - name: store-mcp-server
          image: ghcr.io/vishalk17/store-mcp-server:0.005
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-mcp-server
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: store-mcp-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: store-mcp-server-public
  namespace: default
spec:
  parentRefs:
    - name: myapp-gateway
      namespace: default
  hostnames:
    - vishalk17.cloudwithme.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - name: store-mcp-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: store-mcp-oauth-discovery
  namespace: default
spec:
  parentRefs:
    - name: myapp-gateway
      namespace: default

  hostnames:
    - vishalk17.cloudwithme.dev

  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/oauth-authorization-server
      backendRefs:
        - name: store-mcp-server
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: casdoor-oidc-mcp
  namespace: default
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: store-mcp-server-public

  oidc:
    provider:
      issuer: "https://casdoor.cloudwithme.dev"
      authorizationEndpoint: "https://casdoor.cloudwithme.dev/login/oauth/authorize"
      tokenEndpoint: "https://casdoor.cloudwithme.dev/api/login/oauth/access_token"

    clientID: "55af642109d62315da60"

    clientSecret:
      name: "casdoor-oidc-client-secret"

    scopes:
      - openid
      - profile
      - email

    redirectURL: "https://vishalk17.cloudwithme.dev/store-mcp-server-public/oauth2/callback"
    logoutPath: "/store-mcp-server-public/logout"

    forwardAccessToken: true
    refreshToken: true
